--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
